--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--MAIN SECTION-->
     <main>
       <!--HERO-->
-      <section class="section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-text">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
@@ -100,7 +100,7 @@
         </div>
       </section>
       <!--WHAT WE ARE DOING-->
-      <section class="section">
+      <section class="section doing">
         <div class="container">
           <h2 class="wwad">What are we doing</h2>
           <ul class="what-pict">
@@ -139,8 +139,10 @@
                 width="264"
                 alt="Mark Guerrero's photo"
               />
-              <h3 class="head-name">Mark Guerrero</h3>
-              <p class="position">Product Designer</p>
+              <div class="our-head">
+                <h3 class="head-name">Mark Guerrero</h3>
+                <p class="position">Product Designer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -148,8 +150,10 @@
                 width="264"
                 alt="Tom Ford's photo"
               />
-              <h3 class="head-name">Tom Ford</h3>
-              <p class="position">Frontend Developer</p>
+              <div class="our-head">
+                <h3 class="head-name">Tom Ford</h3>
+                <p class="position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -157,8 +161,10 @@
                 width="264"
                 alt="Camila Garcia's photo"
               />
-              <h3 class="head-name">Camila Garcia</h3>
-              <p class="position">Marketing</p>
+              <div class="our-head">
+                <h3 class="head-name">Camila Garcia</h3>
+                <p class="position">Marketing</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -166,8 +172,10 @@
                 width="264"
                 alt="Camila Garcia's photo"
               />
-              <h3 class="head-name">Daniel Wilson</h3>
-              <p class="position">UI Designer</p>
+              <div class="our-head">
+                <h3 class="head-name">Daniel Wilson</h3>
+                <p class="position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
