--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body class="body-portfolio">
     <!--HEADER-->
-    <header class="header">
+    <header class="header portf">
       <!--NAVIGATION-->
       <div class="container head">
         <nav class="nav-head">
@@ -57,7 +57,7 @@
     <!--MAIN SECTION-->
     <main>
       <!--FILTERS-->
-      <section class="container">
+      <section class="section project">
         <ul class="filter">
           <li class="buttons">
             <button class="filter-button" type="button">All</button>
@@ -76,85 +76,109 @@
           </li>
         </ul>
         <!--Projects-->
-        <ul class="projects">
-          <li class="cards">
-            <img
-              src="./images/Portfolio/bank-app.jpg"
-              width="360"
-              alt="banking app"
-            />
-            <h3 class="project-name">Banking App Interface Concept</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/scan-qr.jpg"
-              width="360"
-              alt="scaning qr code"
-            />
-            <h3 class="project-name">Cashless Payment</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/pc.jpg"
-              width="360"
-              alt="phone adaptive app"
-            />
-            <h3 class="project-name">Meditaion App</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/car.jpg"
-              width="360"
-              alt="car drive app"
-            />
-            <h3 class="project-name">Taxi Service</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/phone.jpg"
-              width="360"
-              alt="smartphone"
-            />
-            <h3 class="project-name">Screen Illustrations</h3>
-            <p class="project-text">Design</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/woman.jpg"
-              width="360"
-              alt="woman with vegetables"
-            />
-            <h3 class="project-name">Online Courses</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/app.jpg"
-              width="360"
-              alt="smartphone app"
-            />
-            <h3 class="project-name">Instagram Stories Concept</h3>
-            <p class="project-text">Design</p>
-          </li>
-          <li class="cards">
-            <img
-              src="./images/Portfolio/vegetables.jpg"
-              width="360"
-              alt="vegetables"
-            />
-            <h3 class="project-name">Organic Food</h3>
-            <p class="project-text">Web Site</p>
-          </li>
-          <li class="cards">
-            <img src="./images/Portfolio/coffee.jpg" width="360" alt="coffee" />
-            <h3 class="project-name">Fresh Coffee</h3>
-            <p class="project-text">Web Site</p>
-          </li>
-        </ul>
+        <div class="container project">
+          <ul class="projects">
+            <li class="cards">
+              <img
+                src="./images/Portfolio/bank-app.jpg"
+                width="360"
+                alt="banking app"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Banking App Interface Concept</h3>
+                <p class="project-text">App</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/scan-qr.jpg"
+                width="360"
+                alt="scaning qr code"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Cashless Payment</h3>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/pc.jpg"
+                width="360"
+                alt="phone adaptive app"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Meditaion App</h3>
+                <p class="project-text">App</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/car.jpg"
+                width="360"
+                alt="car drive app"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Taxi Service</h3>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/phone.jpg"
+                width="360"
+                alt="smartphone"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Screen Illustrations</h3>
+                <p class="project-text">Design</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/woman.jpg"
+                width="360"
+                alt="woman with vegetables"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Online Courses</h3>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/app.jpg"
+                width="360"
+                alt="smartphone app"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Instagram Stories Concept</h3>
+                <p class="project-text">Design</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/vegetables.jpg"
+                width="360"
+                alt="vegetables"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Organic Food</h3>
+                <p class="project-text">Web Site</p>
+              </div>
+            </li>
+            <li class="cards">
+              <img
+                src="./images/Portfolio/coffee.jpg"
+                width="360"
+                alt="coffee"
+              />
+              <div class="project-head">
+                <h3 class="project-name">Fresh Coffee</h3>
+                <p class="project-text">Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--FOOTER-->
       <footer class="footer">
